; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-cfg.c_update_modified_stmts.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-cfg.c_update_modified_stmts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATEMENT_LIST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @update_modified_stmts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_modified_stmts(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i64 @TREE_CODE(i32 %5)
  %7 = load i64, i64* @STATEMENT_LIST, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %25

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @tsi_start(i32 %10)
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %22, %9
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @tsi_end_p(i32 %13)
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  br i1 %16, label %17, label %24

17:                                               ; preds = %12
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @tsi_stmt(i32 %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @update_stmt_if_modified(i32 %20)
  br label %22

22:                                               ; preds = %17
  %23 = call i32 @tsi_next(i32* %3)
  br label %12

24:                                               ; preds = %12
  br label %28

25:                                               ; preds = %1
  %26 = load i32, i32* %2, align 4
  %27 = call i32 @update_stmt_if_modified(i32 %26)
  br label %28

28:                                               ; preds = %25, %24
  ret void
}

declare dso_local i64 @TREE_CODE(i32) #1

declare dso_local i32 @tsi_start(i32) #1

declare dso_local i32 @tsi_end_p(i32) #1

declare dso_local i32 @tsi_stmt(i32) #1

declare dso_local i32 @update_stmt_if_modified(i32) #1

declare dso_local i32 @tsi_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
